<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for the editor -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_overview"
            style="@style/CategoryStyle"
            android:maxLines="2"/>



        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_product_name"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />


            <EditText
                android:id="@+id/edit_product_description"
                android:hint="@string/hint_product_description"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/container_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_quantity"
            style="@style/CategoryStyle"
            android:layout_width="40dp"/>

        <!-- Input field -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical">


            <EditText
                android:id="@+id/edit_product_quantity"
                android:hint="@string/hint_product_quantity"
                android:inputType="number"
                style="@style/EditorFieldStyle" />


        </LinearLayout>


        <Button
            android:id="@+id/decrease_button"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:textAppearance="?android:textAppearanceSmall"
            android:onClick="onDecreasePress"
            android:focusable="false"
            android:text="-"
            android:shadowColor="#2B3D4D"/>

        <Button
            android:id="@+id/increase_button"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:textAppearance="?android:textAppearanceSmall"
            android:onClick="onIncreasePress"
            android:focusable="false"
            android:text="+"
            android:shadowColor="#2B3D4D"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/container_measurement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_cost"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp">


            <EditText
                android:id="@+id/edit_product_price"
                android:hint="@string/hint_product_price"
                android:inputType="number"
                style="@style/EditorFieldStyle" />


            <TextView
                android:id="@+id/label_weight_units"
                android:text="@string/monetary_units"
                style="@style/EditorUnitsStyle"/>
        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <Button
        android:id="@+id/image_button"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:textAppearance="?android:textAppearanceSmall"
        android:onClick="openImageSelector"
        android:focusable="false"
        android:text="add image"
        android:shadowColor="#2B3D4D"/>

    <ImageView
        android:id="@+id/picture"
        android:layout_width="130dp"
        android:layout_height="130dp"/>

    <Button
        android:id="@+id/supply_button"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:textAppearance="?android:textAppearanceSmall"
        android:onClick="orderButton"
        android:focusable="false"
        android:text="order"
        android:shadowColor="#2B3D4D"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="7dp"/>

    </LinearLayout>
</LinearLayout>
